--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -53,7 +53,7 @@
 
 		<div class="col-xs-5">
 		  	<h2><%=accountInfo.title%></h2>
-		  	<button type="button" class="btn btn-default", id="newElementTouched">Left</button>
+		  	<button type="button" class="btn btn-default">Left</button>
  	        <table class="table table-hover">
                 <thead></th><th>Название</th><th>Сумма</th></tr></thead>
                 <tbody id="расходы">
@@ -82,12 +82,66 @@
 
 
 
+
+
+
 	<div class="row">
 
 		<div class="col-xs-5">
-	  		<h1>My First Bootstrap Page</h1>
-  			<p>This is some text.</p> 
+		<h2>Транзакции</h2>
+	  		<form class="form-inline" style="margin-top: 2%;">
+			  <div class="form-group">
+			    <input type="text" class="form-control" id="exampleInputName2" placeholder="Сумма">
+			  </div>
+			  <div class="form-group">
+
+
+
+				<div class="btn-group">
+				  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				    Категория <span class="caret"></span>
+				  </button>
+				  <ul class="dropdown-menu">
+				    <li><a href="#">Action</a></li>
+				    <li><a href="#">Another action</a></li>
+				    <li><a href="#">Something else here</a></li>
+				    <li role="separator" class="divider"></li>
+				    <li><a href="#">Separated link</a></li>
+				  </ul>
+				</div>
+
+
+			  </div>
+			  <button type="button" class="btn btn-primary", id="newElementTouched">Внести</button>
+
+			</form>
+
+			<table class="table table-hover">
+                <thead></th><th>Потрачено</th><th>Категория</th><th>Дата</th></tr></thead>
+                <tbody>
+
+                <% transactions.info.forEach(function(transaction) { %>
+                <tr>
+                    <td>
+                        <%=transaction.amount%>
+                    </td>
+                    <td>
+                        <%=transaction.destination%>
+                    </td>
+                    <td>
+                        <%=transaction.date%>
+                    </td>
+                </tr>
+                <% }) %>
+
+                </tbody>
+            </table>
+
 		</div>
+
+
+
+
 
 		<div class="col-xs-5 pull-right">
 			<h2><%=categories.title%></h2>
@@ -121,7 +175,7 @@
 <script type="text/javascript">
 	
 	$('#newElementTouched').click(function() {
-    	var data = { name: 'insertNewAccount' };
+    	var data = { name: 'insertNewTransaction' };
     	$.post('/', data, function(res) {
 
     		$('#расходы').empty();
