--- a/app_server/views/style.css
+++ b/app_server/views/style.css
@@ -1,5 +1,5 @@
 body {
-  font: 24px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 18px "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
   
 .col-xs-5 {
@@ -11,7 +11,8 @@ body {
   width: 45%;
 }
 
-
-
-
-
+table {
+  display: block;
+  height: 250px;
+  overflow-y: scroll;
+}
