--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -61,7 +61,32 @@
 
 
 <div class="col-xs-5">
-            <h2><%=categories.title%></h2>
+    <div>
+        <h2><%=categories.title%></h2>
+         <button type="button" class="btn btn-primary", id="showInsertCategoryField">+</button>
+    </div>
+       
+
+
+
+        <form class="form-inline", style="margin-top: 2%;", id="insertCategoryField", hidden="true">
+            <div class="form-group">
+                <input type="text" class="form-control" id="outgoungAmount" placeholder="Название">
+                <input type="number" step="100" min="0" class="form-control" id="outgoungAmount" placeholder="Лимит">
+
+            </div>
+            <div class="form-group">
+                <div class="btn-group">
+                    <ul class="dropdown-menu", id="dropdownCategories">
+                        <li><a href="#">Action</a></li>
+                    </ul>
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary", id="newElementTouched">Внести</button>
+        </form>
+
+
+
             <table class="table table-hover">
                 <thead></th><th>Название</th><th>Потрачено</th><th>Лимит</th></tr></thead>
                 <tbody>
@@ -134,6 +159,12 @@
 
 	 </div>
 
+     <!-- Button trigger modal -->
+
+
+
+
+
 </div>
 
 
@@ -189,6 +220,20 @@
         });
     });
 
+    $('#showInsertCategoryField').click(function() {
+        $('#insertCategoryField').toggle()
+        
+        $.post('/categories', function(res) {
+
+            $('#dropdownCategories').empty();
+             for (var data in res) {
+                $('#dropdownCategories').append('<li><a href="#">'+res[data].name+'</a></li>');
+            }     
+        });
+    });
+
+    
+
     $(function() {
         $(".dropdown-menu").on('click', 'li a', function(){
             $(".btn:first-child").text($(this).text());
@@ -203,10 +248,28 @@
 </script>
 
 
+<!--         <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+        Launch demo modal
+        </button> -->
 
-
-
-
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
