--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -10,9 +10,37 @@
    <script src='http://code.jquery.com/jquery-1.7.1.min.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+
+      <!-- Bootstrap stylesheet -->
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+    <!-- bootstrap widget theme -->
+    <link rel="stylesheet" href="https://mottie.github.io/tablesorter/css/theme.bootstrap.css">
+
+    <!-- tablesorter plugin -->
+    <script src="https://mottie.github.io/tablesorter/js/jquery.tablesorter.js"></script>
+    <!-- tablesorter widget file - loaded after the plugin -->
+    <script src="https://mottie.github.io/tablesorter/js/jquery.tablesorter.widgets.js"></script>
+
+    <!-- pager plugin -->
+    <link rel="stylesheet" href="https://mottie.github.io/tablesorter/addons/pager/jquery.tablesorter.pager.css">
+    <script src="https://mottie.github.io/tablesorter/addons/pager/jquery.tablesorter.pager.js"></script>
+
+
 </head>
 
 <body>
+
+
+
+
+
+
+
+
+
+
+
 <div class="container">
 
 <div id="customAlert">
@@ -80,7 +108,8 @@
     </form>
 
     <table class="table table-hover", id="Лимиты">
-        <thead></th><th>Название</th><th>Потрачено</th><th>Лимит</th></tr></thead>
+        <thead></th><th class="filter-select filter-exact" data-placeholder="Выберите">Категория</th><th>Потрачено</th><th>Лимит</th></tr></thead>
+
         <tbody>
 
         <% categories.info.forEach(function(category) { %>
@@ -125,7 +154,7 @@
 			</form>
 
 			<table class="table table-hover", id="расходы">
-                <thead></th><th>Потрачено</th><th>Категория</th><th>Дата</th></tr></thead>
+                <thead></th><th>Потрачено</th><th class="filter-select filter-exact" data-placeholder="Выберите">Категория</th><th>Дата</th></tr></thead>
                 <tbody>
 
                 <% transactions.info.forEach(function(transaction) { %>
@@ -263,6 +292,88 @@
         var alert = $('<div class="alert alert-warning alert-dismissible" role="alert" style="margin-top: 2%;><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>  '+text+'</div>')
         $('#customAlert').append(alert)
     }
+
+
+    $(function() {
+
+  // NOTE: $.tablesorter.theme.bootstrap is ALREADY INCLUDED in the jquery.tablesorter.widgets.js
+  // file; it is included here to show how you can modify the default classes
+  $.tablesorter.themes.bootstrap = {
+    // these classes are added to the table. To see other table classes available,
+    // look here: http://getbootstrap.com/css/#tables
+    table        : 'table table-bordered table-striped',
+    caption      : 'caption',
+    // header class names
+    header       : 'bootstrap-header', // give the header a gradient background (theme.bootstrap_2.css)
+    sortNone     : '',
+    sortAsc      : '',
+    sortDesc     : '',
+    active       : '', // applied when column is sorted
+    hover        : '', // custom css required - a defined bootstrap style may not override other classes
+    // icon class names
+    icons        : '', // add "icon-white" to make them white; this icon class is added to the <i> in the header
+    iconSortNone : 'bootstrap-icon-unsorted', // class name added to icon when column is not sorted
+    iconSortAsc  : 'glyphicon glyphicon-chevron-up', // class name added to icon when column has ascending sort
+    iconSortDesc : 'glyphicon glyphicon-chevron-down', // class name added to icon when column has descending sort
+    filterRow    : '', // filter row class; use widgetOptions.filter_cssFilter for the input/select element
+    footerRow    : '',
+    footerCells  : '',
+    even         : '', // even row zebra striping
+    odd          : ''  // odd row zebra striping
+  };
+
+  // call the tablesorter plugin and apply the uitheme widget
+  $("table").tablesorter({
+    // this will apply the bootstrap theme if "uitheme" widget is included
+    // the widgetOptions.uitheme is no longer required to be set
+    theme : "bootstrap",
+
+    widthFixed: true,
+
+    headerTemplate : '{content} {icon}', // new in v2.7. Needed to add the bootstrap icon!
+
+    // widget code contained in the jquery.tablesorter.widgets.js file
+    // use the zebra stripe widget if you plan on hiding any rows (filter widget)
+    widgets : [ "uitheme", "zebra" ], // "filter",
+
+    widgetOptions : {
+      // using the default zebra striping class name, so it actually isn't included in the theme variable above
+      // this is ONLY needed for bootstrap theming if you are using the filter widget, because rows are hidden
+      zebra : ["even", "odd"],
+
+      // reset filters button
+      filter_reset : ".reset",
+
+      // extra css class name (string or array) added to the filter element (input or select)
+      filter_cssFilter: "form-control",
+
+      // set the uitheme widget to use the bootstrap theme class names
+      // this is no longer required, if theme is set
+      // ,uitheme : "bootstrap"
+
+    }
+  })
+  .tablesorterPager({
+
+    // target the pager markup - see the HTML block below
+    container: $(".ts-pager"),
+
+    // target the pager page select dropdown - choose a page
+    cssGoto  : ".pagenum",
+
+    // remove rows from the table to speed up the sort of large tables.
+    // setting this to false, only hides the non-visible rows; needed if you plan to add/remove rows with the pager enabled.
+    removeRows: false,
+
+    // output string - default is '{page}/{totalPages}';
+    // possible variables: {page}, {totalPages}, {filteredPages}, {startRow}, {endRow}, {filteredRows} and {totalRows}
+    output: '{startRow} - {endRow} / {filteredRows} ({totalRows})'
+
+  });
+
+});
+
+
 </script>
 
 
@@ -292,6 +403,17 @@
 </div>
 
 
+
+<table> <!-- bootstrap classes added by the uitheme widget -->
+  <th colspan="7" class="ts-pager form-horizontal">
+    <button type="button" class="btn prev"><i class="icon-arrow-left glyphicon glyphicon-backward"></i></button>
+    <button type="button" class="btn next"><i class="icon-arrow-right glyphicon glyphicon-forward"></i></button>
+    <select class="pagesize input-mini">
+      <option selected="selected" value="10">10</option>
+      <option value="20">20</option>
+    </select>
+  </th>
+</table>
 
 
 </body>
