--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -201,7 +201,7 @@ test
 	
     $(document).ready(function(){
       вычислитьСуммуЛимитов();
-      вычислитьСуммуРасходов();
+      // вычислитьСуммуРасходов();
     });
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////
