--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -15,16 +15,16 @@
       <!-- Bootstrap stylesheet -->
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <!-- bootstrap widget theme -->
-    <link rel="stylesheet" href="https://mottie.github.io/tablesorter/css/theme.bootstrap.css">
+    <!-- <link rel="stylesheet" href="https://mottie.github.io/tablesorter/css/theme.bootstrap.css"> -->
 
     <!-- tablesorter plugin -->
-    <script src="https://mottie.github.io/tablesorter/js/jquery.tablesorter.js"></script>
+    <!-- <script src="https://mottie.github.io/tablesorter/js/jquery.tablesorter.js"></script> -->
     <!-- tablesorter widget file - loaded after the plugin -->
-    <script src="https://mottie.github.io/tablesorter/js/jquery.tablesorter.widgets.js"></script>
+    <!-- <script src="https://mottie.github.io/tablesorter/js/jquery.tablesorter.widgets.js"></script> -->
 
     <!-- pager plugin -->
-    <link rel="stylesheet" href="https://mottie.github.io/tablesorter/addons/pager/jquery.tablesorter.pager.css">
-    <script src="https://mottie.github.io/tablesorter/addons/pager/jquery.tablesorter.pager.js"></script>
+    <!-- <link rel="stylesheet" href="https://mottie.github.io/tablesorter/addons/pager/jquery.tablesorter.pager.css"> -->
+    <!-- <script src="https://mottie.github.io/tablesorter/addons/pager/jquery.tablesorter.pager.js"></script> -->
 
 
 </head>
