--- a/app_server/views/index.ejs
+++ b/app_server/views/index.ejs
@@ -77,7 +77,18 @@
 функции кнопок - фильтр +/-, подсветка кнопки при +
 Строка Итого, сумма, дата, кнопка календарь. По умолчанию - сумма отображенных.-->
 	  		<h2>Сбережения</h2>
-  			<p></p> 
+  			<p>
+       
+Инвестиции     2 000,00   </br> 
+ДОМ     25 000,00    </br> 
+Ребенок     2 500,00    </br> 
+Свадьба     2 500,00    </br> 
+Отпуск      5 000,00    </br> 
+НЗ      2 000,00    </br> </br> 
+
+ИТОГО  39 000,00
+
+        </p> 
 		</div>
 
 	 </div>
